Freedom Sanbox Ant Deploy/src/objects/Workflows_Tracker_Details__c.object
<CustomObject>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Days_After__c</fullName>
        <label>Days After</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Workflows Tracker Details</relationshipLabel>
        <relationshipName>Workflows_Tracker_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Master</label>
        <referenceTo>Event_Master__c</referenceTo>
        <relationshipLabel>Workflows Tracker Details</relationshipLabel>
        <relationshipName>Workflows_Tracker_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Partner_Task_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Partner Task Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Workflows_Tracker_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Workflows Tracker Details</label>
        <referenceTo>Workflows_Tracker_Details__c</referenceTo>
        <relationshipLabel>Workflows Tracker Details</relationshipLabel>
        <relationshipName>Workflows_Tracker_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Workflow_Details_Date__c</fullName>
        <description>Entity Creation Date and Data Collection Date is used to getting Due Date for Particular Task.</description>
        <label>Related Workflow Details Date</label>
        <picklist>
            <picklistValues>
                <fullName>Entity Creation Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Collection Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Presentation Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Id__c</fullName>
        <label>Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Sequence__c</fullName>
        <label>Task Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workflows_Tracker_Master__c</fullName>
        <label>Workflows Tracker Master</label>
        <referenceTo>Workflows_Tracker_Master__c</referenceTo>
        <relationshipLabel>Workflows Tracker Details</relationshipLabel>
        <relationshipName>Workflows_Tracker_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workflows Tracker Details</label>
    <nameField>
        <label>Workflows Tracker Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflows Tracker Details</pluralLabel>
    <recordTypes>
        <fullName>EntityWflowDetail</fullName>
        <active>true</active>
        <label>EntityWflowDetail</label>
    </recordTypes>
    <recordTypes>
        <fullName>WFlowTemplate</fullName>
        <active>true</active>
        <label>WFlowTemplate</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>